# vtrex

./: .clang-format  .editorconfig  .gitattributes  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md
.github/workflows/: build.yml
src/: capabilities.cpp  capabilities.h  coloring.cpp  coloring.h  engine.cpp  engine.h  font.cpp  font.h  macros.cpp  macros.h  main.cpp  options.cpp  options.h  os.cpp  os.h
